Pathfinding performance bug fixes
Pathfinding now in it's own thread.